# irium-core

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.json  README.md  RELEASE-NOTES.md  SECURITY.md  TESTING.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-all-platforms.yml  labeler.yml  release.yml  security.yml  stale.yml  typecheck.yml
.playwright-mcp/: page-2026-05-07T08-27-11-587Z.yml  page-2026-05-07T08-27-30-944Z.yml  page-2026-05-07T08-27-42-143Z.yml  page-2026-05-07T08-27-46-695Z.yml
docs/: CONTRIBUTING.md  DESKTOP.md  IRIUM-JS-SDK.md  MARKETPLACE.md  MOBILE.md  WEB-WALLET.md
docs/superpowers/plans/: 2026-05-07-irium-gui-foundation.md  2026-05-08-explorer-page.md
docs/superpowers/specs/: 2026-05-07-irium-gui-foundation-design.md  2026-05-08-explorer-page-design.md
scripts/: build-irium-node.js  build-windows.ps1  gen_installer_images.py  patch-solo-pool-i18n.js  patch-terminal-i18n.js  place-binaries-linux.sh  place-binaries-macos.sh  place-binaries-windows.ps1  setup.sh  sync-locale-keys.cjs  translate-locales.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  types.rs
src/components/: ErrorBoundary.tsx  GlobalAgreementNotifier.tsx  GpuDevicePicker.tsx  NodeOfflineBanner.tsx  PoawxActivationBanner.tsx  PoawxDelegationStub.tsx  QuarantineRecoveryBanner.tsx  TxDetailModal.tsx
src/components/layout/: NetworkBackground.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TopBar.tsx
src/components/settlement-ui/: ActiveAgreementsPanel.tsx  AddressInput.tsx  AgreementRow.tsx  AmountInput.tsx  DealCode.tsx  DurationPicker.tsx  ErrorMapper.ts  PlainStatus.ts  StatusBadge.tsx  TechnicalDetails.tsx  WizardShell.tsx
src/components/ui/: Drawer.tsx  NumberDelta.tsx  Pill.tsx  Table.tsx  Tabs.tsx  TimestampDisplay.tsx  TradingModal.tsx  index.ts
src/hooks/: useKeyboardShortcuts.ts  useNodePoller.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  vi.json  zh.json
src/lib/: coinbase.ts  errors.ts  hooks.ts  invoke.ts  mock.ts  store.ts  tauri.ts  terminalCommands.ts  types.ts
src/pages/: About.tsx  Agreements.tsx  BuyerWizard.tsx  Dashboard.tsx  Explorer.tsx  Help.tsx  Logs.tsx  Marketplace.tsx  Miner.tsx  Onboarding.tsx  Reputation.tsx  SellerWizard.tsx  Settings.tsx  Settlement.tsx  Terminal.tsx  Wallet.tsx
src/pages/_legacy/: BuyerWizard.tsx  SellerWizard.tsx  Settlement.tsx
src/pages/marketplace/: CreateOrderModal.tsx  EscrowProgress.tsx  OrderBook.tsx  OrderTypePickerModal.tsx  ResolverPicker.tsx  SellerTradeReview.tsx  TakeOfferModal.tsx  TradeCalculator.tsx
src/pages/marketplace/swap/: ComingSoonOverlay.tsx  CreateSwapOrderModal.tsx  MySwapsPanel.tsx  PairOrderBook.tsx  PairSwitcher.tsx  PriceChart.tsx  ProofSubmitInline.tsx  SwapPanel.tsx  SwapProgress.tsx  TakeSwapOrderModal.tsx
src/pages/marketplace/swap/hooks/: useActivePair.ts  usePairAvailability.ts  usePairFillHistory.ts
src/pages/marketplace/swap/pairs/: index.ts  irmBtc.ts  irmDoge.ts  irmLtc.ts  irmUsdt.ts  types.ts
src/pages/settlement-ui/: DepositFlow.tsx  DisputeFlow.tsx  DisputeResolveFlow.tsx  PayForWorkFlow.tsx  SafeTradeFlow.tsx  SettlementHub.tsx
src/styles/: globals.css
