[package]
name = "irium-core"
version = "1.0.6"
description = "Irium Core - Full Node Desktop Wallet"
authors = ["Irium Labs"]
license = "MIT"
repository = "https://github.com/iriumlabs/irium-core-gui"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "dialog-save", "fs-create-dir", "process-all", "fs-exists", "fs-write-file", "fs-read-file", "path-all", "http-request", "fs-read-dir", "shell-sidecar", "shell-open", "process-command-api", "window-all", "system-tray", "clipboard-all", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of `tauri dev` you can use this flag to ensure `devPath` is not set to the dev server.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
