[package]
name = "irium-core"
version = "1.0.49"
description = "Irium Core - Full Node Desktop Wallet"
authors = ["Irium Labs"]
license = "MIT"
repository = "https://github.com/iriumlabs/irium-core-gui"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "dialog-save", "fs-create-dir", "process-all", "fs-exists", "fs-write-file", "fs-read-file", "path-all", "http-request", "fs-read-dir", "shell-sidecar", "shell-open", "process-command-api", "window-all", "system-tray", "clipboard-all", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
# OS-provided randomness used to mint the local IRIUM_RPC_TOKEN on first
# launch. Pure-Rust, ~30 KB; pulls from /dev/urandom on Linux/Mac and
# BCryptGenRandom on Windows. The token gates privileged iriumd endpoints
# now that the desktop launcher binds iriumd's RPC to 0.0.0.0.
getrandom = "0.2"
# SHA-256 + hex encoding used by Settlement Hub secret generation (FIX 1).
# When a Hub-created agreement needs an HTLC-style release the preimage
# must be a 32-byte cryptographically-random value whose SHA-256 hash is
# what gets embedded in the agreement's secret_hash field.
sha2 = "0.10"
hex = "0.4"
# FIX 1 (UPnP multi-adapter): enumerate local IPv4 adapters so UPnP
# AddPortMapping picks the LAN-facing IP rather than a Hyper-V / WSL
# virtual switch or VPN tunnel adapter (the most common cause of
# UPnP "succeeds in the router but GUI shows Inactive" on Windows).
if-addrs = "0.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of `tauri dev` you can use this flag to ensure `devPath` is not set to the dev server.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
